--- a/Code Tutorials/EF_CreateDB/EntityFramework/EntityFramework.csproj
+++ b/Code Tutorials/EF_CreateDB/EntityFramework/EntityFramework.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CodeFromDB\CodeFromDB.csproj" />
     <ProjectReference Include="..\EF_CreateDB\BookLibrary.csproj" />
   </ItemGroup>
 
